Removed files not necessary for current tool

--- a/Assets/CodeManager/Runtime/AidenK.CodeManager.asmdef
+++ b/Assets/CodeManager/Runtime/AidenK.CodeManager.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AidenK.WaveFunctionCollapse",
+    "name": "AidenK.CodeManager",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
