Checked for asset creation and deletion

--- a/Assets/CodeManager/Editor/AidenK.CodeManager.Editor.asmdef
+++ b/Assets/CodeManager/Editor/AidenK.CodeManager.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "AidenK.WaveFunctionCollapse.Editor",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:b904dafb22a33d34a9bd63eba43d150f"
+    ],
     "includePlatforms": [
         "Editor"
     ],
