Setup ready to create custom inspectors for vars

--- a/Assets/CodeManager/Runtime/AidenK.CodeManager.asmdef
+++ b/Assets/CodeManager/Runtime/AidenK.CodeManager.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "AidenK.CodeManager",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        ""
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
