--- a/Assets/CodeManager/Editor/AidenK.CodeManager.Editor.asmdef
+++ b/Assets/CodeManager/Editor/AidenK.CodeManager.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AidenK.WaveFunctionCollapse.Editor",
+    "name": "AidenK.CodeManager.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:b904dafb22a33d34a9bd63eba43d150f"
